Fix spacing

--- a/portfolio/src/scss/style.css
+++ b/portfolio/src/scss/style.css
@@ -8,13 +8,21 @@ html, body {
   transition: 0.3s all;
 }
 
-header,
+header {
+   background-color: black;
+   height: 100%;
+   /* width: fit-content; */
+}
 #home {
   height: 100%;
-  width: fit-content;
-  background-color: black;
+  width: 100%;
+  
+ 
 }
 
+#about {
+  width: 100%;
+}
 /* ---- Navbar ---- */
 
 .navbrand-container:hover {
@@ -125,6 +133,8 @@ header,
 
 .ab-title {
   margin-top: 100px;
+  text-align: center;
+  /* position: relative; */
 }
 
 .ab-container {
@@ -161,7 +171,7 @@ header,
 
 .pr-img {
   border: 1px solid black;
-  width: 350px;
+  max-width: 350px;
   height: 350px;
 }
 
